--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=ExercicioSpring
+
+spring.datasource.url=jdbc:mysql://localhost:3306/atendimento?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=***REMOVED***
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto= validate
+spring.jpa.show-sql=true 
+spring.jpa.properties.hibernate.format_sql=true
