--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-src/main/resources/application.properties
+local.properties
+src/main/resources/local.properties
