--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=ExercicioSpring
 
 spring.datasource.url=jdbc:mysql://localhost:3306/atendimento?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=root
+spring.config.import=optional:local.properties
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= validate
